2009-06-12  Olivier Stasse  <olivier.stasse@aist.go.jp>

	Beautification of the abstract Interface.
	* interfaces/jrlDynamicRobot.h: Added Specialized Inverse Kinematics.
	The goal is not provide a generic inverse kinematics, but the possibility
	to have specialized one by robot. The instance of specialized
	kinematic are found by the pair RootJoint-EndJoint.
        The method can returns false if such specialized inverse kinematics
	does not exist.
	* interfaces/jrlHumanoidDynamicRobot.h: Removed dirty interface.
	Added GetBodyParts method with a string argument to have a vector
	of body index describing body parts.

2009-06-11  Olivier Stasse  <olivier.stasse@aist.go.jp>

	[DynamicHumanoidRobot] Adding actuacted joints + optional interface.
	* interfaces/jrlDynamicRobot.h: 
	Setter and getter for the actuacted joints.
	* interfaces/jrlHumanoidDynamicRobot.h: 
	Put optional interface through exception.

2009-06-09  Olivier Stasse  <olivier.stasse@aist.go.jp>

	Fixing stupid bugs on the interface + InverseKinematics for the legs.
	* interfaces/jrlHumanoidDynamicRobot.h: 
	Now the methods are virtual...

2009-06-09  Olivier Stasse  <olivier.stasse@aist.go.jp>

	Adding methods to humanoid specificities.
	* interfaces/jrlHumanoidDynamicRobot.h: 
	Adding geometric information (tibia, forearm lengths) +
	joint description of limbs.

2009-06-04  Olivier Stasse  <olivier.stasse@aist.go.jp>

	Adding Inertia Matrix to Abstract interface.
	* interfaces/jrlDynamicRobot.h: Added computeInertiaMatrix
	and inertiaMatrix.

jrl-dynamics version 1.13 released March 12, 2009

	32. Fixed abstractRobotDynamics.pc file
	31. Removed autotools related files
	30. Install abstractRobotDynamics.doxytag
	
jrl-dynamics version 1.12 released February 27, 2009

	29. Add new methods in jrlDynamicsRobot: jointsBetween(),
	    getJacobian(), getPositionJacobian(), getOrientationJacobian().
	28. Switch from autoconf to cmake.
	27. Add forces and torques matrices.
