@@ -1,0 +1,45 @@
+#FIG 3.2  Produced by xfig version 3.2.5
+Portrait
+Center
+Metric
+Letter  
+100.00
+Single
+-2
+1200 2
+6 1800 1665 5297 3105
+2 3 0 3 0 7 50 -1 -1 0.000 0 0 -1 0 0 13
+	 1926 3055 5263 3055 5263 2723 5011 2472 3343 2472 3343 1971
+	 3176 1722 2842 1722 2675 1971 2675 2472 2259 2472 1926 2723
+	 1926 3055
+-6
+6 3465 540 5535 2205
+2 1 0 2 0 7 50 -1 -1 0.000 0 0 -1 1 0 2
+	0 0 1.00 60.00 120.00
+	 3913 2148 5478 1729
+2 1 0 2 0 7 50 -1 -1 0.000 0 0 -1 1 0 2
+	0 0 1.00 60.00 120.00
+	 3913 2148 3494 584
+-6
+1 3 0 1 0 7 50 -1 -1 0.000 1 0.0000 3015 1980 101 101 3015 1980 3060 2070
+2 1 0 1 0 7 50 -1 -1 0.000 0 0 -1 0 0 2
+	 1935 3060 1935 3465
+2 1 0 1 0 7 50 -1 -1 0.000 0 0 -1 0 0 2
+	 5265 3060 5265 3465
+2 1 0 1 0 7 50 -1 -1 0.000 0 0 -1 1 1 2
+	0 0 1.00 60.00 120.00
+	0 0 1.00 60.00 120.00
+	 1935 3375 5265 3375
+2 1 0 1 0 7 50 -1 -1 0.000 0 0 -1 0 0 2
+	 3915 2160 3915 3060
+2 1 0 1 0 7 50 -1 -1 0.000 0 0 -1 0 0 3
+	 3915 2790 4185 2790 4185 3060
+2 1 0 1 0 7 50 -1 -1 0.000 0 0 -1 0 0 2
+	 3600 3060 3600 2970
+4 1 0 50 -1 0 14 0.0000 4 120 120 5265 1620 x\001
+4 1 0 50 -1 0 14 0.0000 4 180 120 3825 675 y\001
+4 1 0 50 -1 0 14 0.0000 4 165 180 4050 1845 O\001
+4 1 0 50 -1 0 14 0.0000 4 165 525 2970 1530 ankle\001
+4 1 0 50 -1 0 14 0.0000 4 165 165 3600 2835 C\001
+4 1 0 50 -1 0 14 0.0000 4 165 180 3915 3285 H\001
+4 1 0 50 -1 0 12 0.0000 4 195 525 3420 3285 length\001
